// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Parallax /> initialises can render children element 1`] = `
<div
  className="parallax-container"
>
  <h1>
    Test
  </h1>
  <div
    className="parallax"
  >
    <img
      src="image.jpg"
    />
  </div>
</div>
`;

exports[`<Parallax /> should render a Parallax 1`] = `
<div
  className="parallax-container"
>
  <div
    className="parallax"
  >
    <img />
  </div>
</div>
`;
